tests/paczka1/fuzzy1/44240048.err
Error in line 18: RbvqLXDN A386 9,7
Error in line 20: RbvqLXDN S70 4,0
Error in line 15: p5jdZnP S70 69,1
Error in line 29: u0z S852 73,9
Error in line 34: uuQa8 S852 74,5
